# Standalone-ai

./: LICENSE  SDT-9_publication_notes.md  adapters.ts  demo.ts  event.schema.json  event_logger_python.py  event_logger_typescript.ts  governor.schema.json  governor.ts  index.html  index.ts  metrics.ts  package.json  pyproject.toml  sdt9.ts  telemetry.schema.json  telemetry.ts  tsconfig.json  ui.ts  windowing.md
src/: index.ts
